Fix text not showing

--- a/docs/main.css
+++ b/docs/main.css
@@ -4,4 +4,5 @@ body {
     background-color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: normal;
+    color: white;
 }
